# django-vitevue

./: .coveragerc  .gitignore  MANIFEST.in  Makefile  README.md  freezer.py  pyrightconfig.json  requirements.txt  setup.cfg  setup.py  tox.ini
docs/: Makefile  conf.py  index.rst  make.bat
docs/install/: install.rst
docs/ressources/: ressources.rst
docs/usage/: app.rst  example.rst  methods.rst
sandbox/: manage.py  urls.py  wsgi.py
sandbox/settings/: base.py  demo.py  tests.py
testapp/: apps.py  models.py
testapp/migrations/: 0002_auto_20211103_0749.py
tests/: base.py  conftest.py  test_settings.py
tslib/: README.md  package.json  tsconfig.json
tslib/src/: index.ts
vv/: __init__.py  apps.py  conf.py  configure.py  urls.py  utils.py  views.py
vv/conf/: __init__.py  manager.py  models.py
vv/files/api/: api.ts  index.ts  model.ts
vv/frontend_models/: model.py  write.py
vv/management/commands/: tsapi.py  tsmodels.py  viteconf.py  vvcheck.py
vv/static/js/: page.js
vv/static/vv/: vv.js  vv.min.js  vvstore.js
vv/static/vv/src/: vvstore.js
vv/templates/vv/: app.js  index.html
vv/templatetags/: vv_tags.py
vv/tests/: __init__.py  base.py  runtests.py  test_models.py  test_settings.py
vv/tests/testapp/: models.py
vv/tests/testapp/migrations/: 0001_initial.py
vv/views/: auth.py
