[metadata]
name = django-vitevue
version = 0.6.0
description = Manage Vitejs frontends for Django
long_description = file:README.md
long_description_content_type = text/markdown
author = synw
author_email = synwe@yahoo.com
url = https://github.com/synw/django-vitevue
license = MIT
keywords = Python Django
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Framework :: Django
    Framework :: Django :: 2.2
    Framework :: Django :: 3.0
    Framework :: Django :: 3.1

[options]
include_package_data = True
install_requires =
    django-introspection
packages = find:
zip_safe = True

[options.extras_require]
dev =
    flake8
    pytest
    pytest-django
    pytest-cov
    coverage
    factory-boy
    twine
    black

[options.packages.find]
where = .
exclude=
    data
    docs
    tests
    sandbox
    testapp

[bdist_wheel]
universal = 0

[flake8]
max-line-length = 88
exclude =
    .git,
    .venv,
    build,
    __pycache__
    */migrations/*

[tool:pytest]
DJANGO_SETTINGS_MODULE = sandbox.settings.tests
addopts = -vv --cov=vv -p no:warnings -s
python_files =
    *.py
testpaths =
    tests

[tox:tox]
minversion = 3.4.0
envlist = py{36,37,38}-django{22,30,31}-api

[testenv]

deps =
    django22: Django>=2.2,<2.3
    django30: Django>=3.0,<3.1
    django31: Django>=3.1,<3.2
    django22-api: djangorestframework>=3.12.0
    django30-api: djangorestframework>=3.12.0
    django31-api: djangorestframework>=3.12.0

commands =
    pip install -e .[dev]
    pytest -vv tests
